# dc-rest-cpp-qt

./: README.md
client/: CMakeLists.txt  OAIAccountResponse.cpp  OAIAccountResponse.h  OAIActionRowComponentForMessageRequest.cpp  OAIActionRowComponentForMessageRequest.h  OAIActionRowComponentForMessageRequest_components_inner.cpp  OAIActionRowComponentForMessageRequest_components_inner.h  OAIActionRowComponentForModalRequest.cpp  OAIActionRowComponentForModalRequest.h  OAIActionRowComponentResponse.cpp  OAIActionRowComponentResponse.h  OAIActionRowComponentResponse_components_inner.cpp  OAIActionRowComponentResponse_components_inner.h  OAIActivitiesAttachmentResponse.cpp  OAIActivitiesAttachmentResponse.h  OAIAdd_group_dm_user_201_response.cpp  OAIAdd_group_dm_user_201_response.h  OAIAdd_group_dm_user_request.cpp  OAIAdd_group_dm_user_request.h  OAIAdd_guild_member_request.cpp  OAIAdd_guild_member_request.h  OAIAdd_lobby_member_request.cpp  OAIAdd_lobby_member_request.h  OAIApplicationCommandAttachmentOption.cpp  OAIApplicationCommandAttachmentOption.h  OAIApplicationCommandAttachmentOptionResponse.cpp  OAIApplicationCommandAttachmentOptionResponse.h  OAIApplicationCommandAutocompleteCallbackRequest.cpp  OAIApplicationCommandAutocompleteCallbackRequest.h  OAIApplicationCommandAutocompleteCallbackRequest_data.cpp  OAIApplicationCommandAutocompleteCallbackRequest_data.h  OAIApplicationCommandBooleanOption.cpp  OAIApplicationCommandBooleanOption.h  OAIApplicationCommandBooleanOptionResponse.cpp  OAIApplicationCommandBooleanOptionResponse.h  OAIApplicationCommandChannelOption.cpp  OAIApplicationCommandChannelOption.h  OAIApplicationCommandChannelOptionResponse.cpp  OAIApplicationCommandChannelOptionResponse.h  OAIApplicationCommandCreateRequest.cpp  (+894 more)
